# tilla

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
components/bme280/: CMakeLists.txt
components/esp-network/: CMakeLists.txt  Kconfig.projbuild  addr_from_stdin.c  connect.c  network_tools.c  stdin_out.c
components/esp-network/include/: esp_network.h  network_info.h
components/vec/: CMakeLists.txt  vec_helper.c  vec_helper.h
main/: CMakeLists.txt  Kconfig.projbuild  esp_rest_main.c  main.c  rest_server.c  sensor.c
main/display/: CMakeLists.txt  Kconfig.projbuild  display.c  encoder.c
main/display/fetcher/: fetcher.c  fetcher.h
main/display/include/: display.h  encoder.h  layout.h  remote_sensor.h  updater.h
main/display/peripherals/: alarm.c  alarm.h  backlight.c  backlight.h  encoder.c  encoder.h  peripherals.c  peripherals.h
main/display/updater/: layout.c  remote_sensor.c  updater.c
main/drivers/: CMakeLists.txt  Kconfig.projbuild  bme280_driver.c  drivers.c  ds18b20_driver.c
main/drivers/include/: bme280_driver.h  drivers.h  ds18b20_driver.h
main/network/: CMakeLists.txt  Kconfig.projbuild  connect.c  network.c  network_info.c  network_tools.c
main/network/include/: network.h  network_info.h  network_tools.h
main/rest/: CMakeLists.txt  json_endpoint.c  json_endpoint.h  nvs_utils.c  nvs_utils.h  rest_server.c  rest_server.h  rest_utils.c  rest_utils.h
main/rest/device/: chip.c  device.c  device.h  network.c  restart.c  stats.c
main/rest/registration/: registration.c  registration.h
main/rest/sensors/: bme280_rest.c  bme280_rest.h  (+4 more)
